<resources>
    <string name="app_name" translatable="false">Greeno Sapian</string>
    <string name="price_per_kg" translatable="false">₹%d/kg</string>
    <string name="quantity_in_kg" translatable="false">%dkg</string>
    <string name="price_in_Rs" translatable="false">₹%d</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">हिंदी</string>

    <string name="verification">Verification</string>
    <string name="verification_hint">We will send you an <b>One Time Password</b> on your phone number.</string>
    <string name="get_otp">Get OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up_image">sign_up_image</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="didnt_receive_this_code">Didn\'t receive this code?  </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_in">Resend OTP in</string>
    <string name="sending_otp">Sending OTP…</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="submit">SUBMIT</string>
    <string name="required_field">Required Field</string>
    <string name="order">Order</string>
    <string name="history">History</string>
    <string name="contact_us">Contact Us</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="add">Add</string>
    <string name="remove">remove</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total</string>
    <string name="order_placed">Order Placed!!!</string>
    <string name="go_to_menu">Go To Menu</string>
    <string name="date">Date:</string>
    <string name="total_price_in_history">Total :</string>
    <string name="Item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="price_kg">Price(/kg)</string>
    <string name="owner_address" translatable="false">29/28, Sadar Bazar, Delhi</string>
    <string name="owner_contact_info_1" translatable="false">(+91) 638–8977659</string>
    <string name="owner_contact_info_2" translatable="false">(+91) 850–6811986</string>
    <string name="contact_us_any_day_of_the_week">Contact Us <b>any day</b> of the week</string>
    <string name="contact_us_time">Time: <b>10AM</b> - <b>6PM</b></string>
    <string name="site_url" translatable="false">www.greenosapian.com</string>
    <string name="site_url_value" translatable="false">https://www.greenosapian.com</string>
    <string name="todays_list">Today\'s List</string>
    <string name="cart">Cart</string>
</resources>