<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.greenosapian.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/sign_up_image"
            android:scaleType="fitEnd"
            android:scaleX="-1"
            app:layout_constraintBottom_toTopOf="@+id/centre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_sign_up_image" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/verification"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/centre" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/verification_hint"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:goneUnless="@{!viewmodel.isOtpScreenVisible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:visibility="invisible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTF"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/phone_number"
                android:textSize="20sp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8"
                app:prefixText="+91- ">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text="@={viewmodel.phoneNumber}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/getOTPButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="@{()->viewmodel.onSubmitPhoneNumber()}"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/get_otp"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="@+id/phoneNumberTF"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/phoneNumberTF"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberTF" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/OTPLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:goneUnless="@{viewmodel.isOtpScreenVisible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible">

            <com.example.greenosapian.custom_view.OtpEditText
                android:id="@+id/otpEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="6"
                android:text="@={viewmodel.otp}"
                android:textIsSelectable="false"
                android:textSize="20sp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7" />

            <Button
                android:id="@+id/submitOTPButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="@{()->viewmodel.onSubmitOtp()}"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/submit_otp"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="@+id/otpEditText"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/otpEditText"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="sans-serif"
                android:text="@string/resend_otp_in"
                android:textSize="16sp"
                android:textStyle="normal"
                app:invisibleUnless="@{!viewmodel.isResendOtpButtonVisible}"
                app:layout_constraintEnd_toStartOf="@+id/resendOtpTimerTV"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otpEditText"
                app:layout_constraintWidth_percent="0.5"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/resendOtpTimerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:text="@{viewmodel.resendOtpTimerText}"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                app:goneUnless="@{!viewmodel.isResendOtpButtonVisible}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintWidth_percent="0.5"
                tools:text="3s"
                tools:visibility="gone" />

            <Button
                android:id="@+id/resendOtpButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="@{()->viewmodel.onResendOtp()}"
                android:padding="0dp"
                android:text="@string/resend_otp"
                app:goneUnless="@{viewmodel.isResendOtpButtonVisible}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="gone" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
