<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.example.greenosapian.SplashScreenFragment"
        android:label="fragment_splash_screen"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_splashScreenFragment_to_homePageFragment"
            app:destination="@id/homePageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashScreenFragment_to_languageSelectionFragment"
            app:destination="@id/languageSelectionFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.greenosapian.signup.SignUpFragment"
        android:label="SignUpFragment"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_profilePageFragment"
            app:destination="@id/profilePageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_signUpFragment_to_homePageFragment"
            app:destination="@id/homePageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/homePageFragment"
        android:name="com.example.greenosapian.homepage.HomePageFragment"
        android:label="GreenoSapian"
        tools:layout="@layout/fragment_home_page">
        <action
            android:id="@+id/action_homePageFragment_to_splashScreenFragment"
            app:destination="@id/splashScreenFragment"
            app:popUpTo="@id/homePageFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="userPhoneNumber"
            app:argType="string" />
        <action
            android:id="@+id/action_homePageFragment_to_orderListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:destination="@id/orderListFragment" />
        <action
            android:id="@+id/action_homePageFragment_to_historyFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_homePageFragment_to_contactUs2"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:destination="@id/contactUs" />
    </fragment>
    <fragment
        android:id="@+id/profilePageFragment"
        android:name="com.example.greenosapian.profile.ProfilePageFragment"
        android:label="ProfilePageFragment"
        tools:layout="@layout/fragment_profile_page">
        <action
            android:id="@+id/action_profilePageFragment_to_homePageFragment"
            app:destination="@id/homePageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/profilePageFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/orderListFragment"
        android:name="com.example.greenosapian.orderlist.OrderListFragment"
        android:label="@string/todays_list"
        tools:layout="@layout/fragment_order_list">
        <action
            android:id="@+id/action_orderListFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.greenosapian.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_homePageFragment"
            app:destination="@id/homePageFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/homePageFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.greenosapian.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/languageSelectionFragment"
        android:name="com.example.greenosapian.LanguageSelectionFragment"
        android:label="LanguageSelectionFragment"
        tools:layout="@layout/fragment_language_selection">
        <action
            android:id="@+id/action_languageSelectionFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/contactUs"
        android:name="com.example.greenosapian.contactus.ContactUs"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact_us" />
</navigation>